# PythonDFR

./: .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  setup.cfg
apps/pizza/: filter.py  models.py  serializer.py  views.py
apps/pizza/migrations/: 0001_initial.py  0003_alter_pizzamodel_name_alter_pizzamodel_price.py  0004_alter_pizzamodel_options.py
apps/pizza_shop/: filter.py  models.py  urls.py  views.py
apps/user/: models.py  serializers.py  urls.py  views.py
backend/apps/auth/: serializers.py  views.py
backend/apps/chat/: consumers.py  models.py
backend/apps/pizza/: consumer.py  filter.py  managers.py  models.py  serializer.py  urls.py  views.py
backend/apps/pizza_shop/: filter.py  serializer.py  urls.py  views.py
backend/apps/user/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/configs/extra_config/: rest_conf.py
backend/core/dataclasses/: user_dataclasse.py
backend/core/enums/: action_token_enum.py
backend/core/handlers/: error_handler.py
backend/core/middlerware/: socket_middleware.py
backend/core/services/: email_service.py  file_service.py  (+1 more)
backend/templates/: recovery.html  register.html  test_email.html
client/: asset-manifest.json  index.html
configs/: settings.py  urls.py
configs/extra_config/: rest_conf.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js  index.js  router.js
pizza/: models.py  serializers.py  views.py
pizza/migrations/: 0001_initial.py
(+34 files in other folders)
